# src/routes/games.js
@@ -5,7 +5,7 @@ const gameController = require("../controllers/gameController");
 // GET request for list of all games
 router.get("/", gameController.getAllGames);
 // GET request for one game
-router.get("/:id", gameController.getGame);
+router.get("/:gameTitle", gameController.getGame);
 // POST request to add a new game
 router.post("/", gameController.addOrUpdateGame);
  // PUT request to add or update a game
